# models/product.go
@@ -1,0 +1,8 @@
+package models
+
+type Product struct {
+	ID    int 		`json:"id"`
+	Name  string	`json:"name"`
+	Price int		`json:"price"`
+	Stock int		`json:"stock"`
+}
